Socials: update footer links site-wide (Facebook/Instagram/X), switch to fa-x-twitter, set twitter:site=@thisisfuerte_es, and add sameAs to Organization JSON-LD. UI: add robust CSS fallbacks for timeline background/panel (color-mix fallback).

--- a/blog-post.html
+++ b/blog-post.html
@@ -61,9 +61,9 @@
       <div class="footer-social">
         <h4>Síguenos</h4>
         <div class="social-icons">
-          <a href="https://www.facebook.com/thisisfuerteventura" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-          <a href="https://twitter.com/thisisfuertev" target="_blank" rel="noopener noreferrer" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-          <a href="https://www.instagram.com/thisisfuerteventura" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=61583457788241" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+          <a href="https://x.com/thisisfuerte_es" target="_blank" rel="noopener noreferrer" aria-label="X"><i class="fab fa-x-twitter"></i></a>
+          <a href="https://www.instagram.com/thisisfuertevntura.es/" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
           <a href="https://www.youtube.com/@thisisfuerteventura" target="_blank" rel="noopener noreferrer" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
         </div>
       </div>
