Senderos: actualizar senderos.html y añadir/actualizar assets en images/senderos/

--- a/senderos.html
+++ b/senderos.html
@@ -96,7 +96,7 @@
             <div class="tourism-grid">
             
             <article class="tourism-card">
-                <img src="images/turismo/el-cotillo.avif" alt="Calderón Hondo (Lajares)" loading="lazy">
+                <img src="images/senderos/calderon.jpeg" alt="Calderón Hondo (Lajares)" loading="lazy">
                 <div class="tourism-info">
                     <h3>Calderón Hondo (Lajares) – Circular</h3>
                     <p>Ruta volcánica con mirador al cráter. Ideal para familias.</p>
@@ -111,7 +111,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/la-oliva.avif" alt="Pico de la Zarza" loading="lazy">
+                <img src="images/senderos/pico_zarza.jpeg" alt="Pico de la Zarza" loading="lazy">
                 <div class="tourism-info">
                     <h3>Pico de la Zarza (Jandía)</h3>
                     <p>Techo de Fuerteventura con vistas espectaculares a Cofete.</p>
@@ -126,7 +126,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/la-oliva.avif" alt="Isla de Lobos – Circular" loading="lazy">
+                <img src="images/senderos/lobos.jpeg" alt="Isla de Lobos – Circular" loading="lazy">
                 <div class="tourism-info">
                     <h3>Isla de Lobos – Circular</h3>
                     <p>Ruta costera por la reserva natural. Necesita permiso de acceso.</p>
@@ -141,7 +141,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/la-oliva.avif" alt="Barranco de las Peñitas" loading="lazy">
+                <img src="images/senderos/peñitas.jpeg" alt="Barranco de las Peñitas" loading="lazy">
                 <div class="tourism-info">
                     <h3>Barranco de las Peñitas – Arco y Ermita</h3>
                     <p>Paisaje granítico con el arco natural y la ermita de la Peña.</p>
@@ -156,7 +156,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/la-oliva.avif" alt="Ajuy y Cuevas" loading="lazy">
+                <img src="images/senderos/ajuy.jpeg" alt="Ajuy y Cuevas" loading="lazy">
                 <div class="tourism-info">
                     <h3>Ajuy – Cuevas y acantilados</h3>
                     <p>Paseo costero por depósitos fósiles y cuevas marinas.</p>
@@ -171,7 +171,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/la-oliva.avif" alt="Malpaís de la Arena" loading="lazy">
+                <img src="images/senderos/malpais_arena.jpeg" alt="Malpaís de la Arena" loading="lazy">
                 <div class="tourism-info">
                     <h3>Malpaís de la Arena – Circular</h3>
                     <p>Itinerario por campos de lava y coladas volcánicas en el norte.</p>
@@ -186,7 +186,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/la-oliva.avif" alt="GR-131 Tramo Norte" loading="lazy">
+                <img src="images/senderos/Norte.jpeg" alt="GR-131 Tramo Norte" loading="lazy">
                 <div class="tourism-info">
                     <h3>GR‑131 Tramo Norte (Corralejo → La Oliva)</h3>
                     <p>Etapa del sendero insular por malpaís y llanos del norte.</p>
@@ -201,7 +201,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/la-oliva.avif" alt="Betancuria – Morro Velosa" loading="lazy">
+                <img src="images/senderos/morro_velosa.jpeg" alt="Betancuria – Morro Velosa" loading="lazy">
                 <div class="tourism-info">
                     <h3>Betancuria – Morro Velosa</h3>
                     <p>Crestas y miradores del macizo central. Paisaje interior.</p>
@@ -216,7 +216,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/la-oliva.avif" alt="La Pared – Viejo Rey" loading="lazy">
+                <img src="images/senderos/viejo.jpeg" alt="La Pared – Viejo Rey" loading="lazy">
                 <div class="tourism-info">
                     <h3>La Pared – Playa del Viejo Rey</h3>
                     <p>Tramo costero con dunas fósiles y acantilados. Precaución con el oleaje.</p>
@@ -231,7 +231,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/la-oliva.avif" alt="Cofete – Roque del Moro" loading="lazy">
+                <img src="images/senderos/roque_moro.jpeg" alt="Cofete – Roque del Moro" loading="lazy">
                 <div class="tourism-info">
                     <h3>Cofete – Roque del Moro</h3>
                     <p>Litoral salvaje del sur. Ruta exigente por arena y viento.</p>
