Traducción completa de comentarios a español (HTML, CSS, JS) y barrido final en senderos.html

--- a/noticia.html
+++ b/noticia.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="Lee las últimas noticias de Fuerteventura con información detallada, imágenes y fuentes verificadas.">
 	<meta name="robots" content="index, follow, max-image-preview:large">
 	
-	<!-- Preconnect to external resources for performance -->
+	<!-- Preconexión a recursos externos para mejorar el rendimiento -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
@@ -113,7 +113,7 @@
 	<script src="js/ambient-sounds.js?v=2025111508" defer></script>
 	<script src="js/sand-write.js?v=2025111611" defer></script>
 	
-	<!-- Cookie Consent Banner -->
+	<!-- Banner de consentimiento de cookies -->
 	<div id="cookie-consent" class="cookie-consent">
 		<div class="cookie-consent-content">
 			<div class="cookie-consent-text">
@@ -129,7 +129,7 @@
 		</div>
 	</div>
 
-	<!-- Cookie Settings Modal -->
+	<!-- Modal de configuración de cookies -->
 	<div id="cookie-modal" class="cookie-modal">
 		<div class="cookie-modal-content">
 			<div class="cookie-modal-header">
