--- a/alojamiento.html
+++ b/alojamiento.html
@@ -6,7 +6,7 @@
     <title>Alojamiento en Fuerteventura 2025 - Hoteles, Apartamentos y Villas | This is Fuerteventura</title>
     <meta name="theme-color" content="#0f4c81">
     
-    <!-- Preconnect to external resources for performance -->
+    <!-- Preconexión a recursos externos para mejorar el rendimiento -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
@@ -19,9 +19,9 @@
     <link rel="preload" href="images/Fuerteventura.jpeg" as="image" fetchpriority="high">
     <!-- Google Fonts: Inter para texto, Playfair Display para títulos -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&family=Yeseva+One&display=swap" rel="stylesheet">
-    <!-- Swiper for galleries/timeline -->
+    <!-- Swiper para galerías y timeline -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" / crossorigin="anonymous" integrity="sha384-tOPXDsn4moKzmRcYpDt8mOcJWxzy89N8dK0oEkxTx90DZYjDdznDQ4IEiH1pcZH5">
-    <!-- Font Awesome 6 -->
+    <!-- Font Awesome 6 (iconos) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" crossorigin="anonymous" integrity="sha384-t1nt8BQoYMLFN5p42tRAtuAAFQaCQODekUVeKKZrEnEyp4H2R0RHFz0KWpmj7i8g">
     <meta name="description" content="Encuentra el mejor alojamiento en Fuerteventura 2025: hoteles todo incluido, apartamentos vacacionales, villas de lujo y casas rurales. Corralejo, Caleta de Fuste, Jandía y más.">
     <meta name="keywords" content="hoteles Fuerteventura, apartamentos Fuerteventura, alojamiento Corralejo, hoteles Caleta de Fuste, villas Fuerteventura, todo incluido Canarias, donde alojarse Fuerteventura">
@@ -41,7 +41,7 @@
     <meta name="twitter:image" content="https://thisisfuerteventura.es/images/logo.jpg">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://www.googletagmanager.com https://analytics.google.com https://www.google-analytics.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' data: https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https: https://unpkg.com https://*.tile.openstreetmap.org; media-src 'self'; connect-src 'self' https://thisisfuerteventura.es https://www.googletagmanager.com https://www.google-analytics.com https://cdn.jsdelivr.net https://unpkg.com http://localhost:3000 http://localhost:3001 http://localhost:* http://127.0.0.1:* https://api.open-meteo.com https://marine-api.open-meteo.com https://ingesteer.services-prod.nsvcs.net; base-uri 'self'; object-src 'none'; frame-ancestors 'self';">
     
-    <!-- Structured Data (external to satisfy CSP) -->
+    <!-- Datos estructurados (archivo externo para cumplir la CSP) -->
     <script type="application/ld+json" src="data/structured/alojamiento-itemlist.jsonld"></script>
 </head>
 <body class="dark-header">
@@ -935,9 +935,9 @@
     <script src="js/scroll-animations.js?v=2025111602" defer></script>
     <script src="js/dark-mode.js?v=2025111508" defer></script>
     <script src="js/ux.js?v=2025111508" defer></script>
-    <!-- Three.js for particle system -->
+    <!-- Three.js para sistema de partículas -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.152.0/build/three.min.js" defer crossorigin="anonymous" integrity="sha384-X9Z4JPIA98tyn9ayVMe0cM9j3zfE7CliV/xrpqv2t757y/UFj/awObaY8PUT6rh7"></script>
-    <!-- GSAP + ScrollTrigger for narrative animations -->
+    <!-- GSAP + ScrollTrigger para animaciones narrativas -->
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js" defer crossorigin="anonymous" integrity="sha384-g4NTh/Iv5PPU4xPyhEWqPcwtNXOvdaDI8LLnyYfyNZOjKJeYQyjzQ9X5275eBjpt"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js" defer crossorigin="anonymous" integrity="sha384-Z3REaz79l2IaAZqJsSABtTbhjgOUYyV3p90XNnAPCSHg3EMTz1fouunq9WZRtj3d"></script>
     <script src="js/particles.js?v=2025111508" defer></script>
@@ -946,7 +946,7 @@
     <script src="js/booking.js?v=2025111508" defer></script>
     <script src="js/sand-write.js?v=2025111611" defer></script>
 
-    <!-- Cookie Consent Banner -->
+    <!-- Banner de consentimiento de cookies -->
     <div id="cookie-consent" class="cookie-consent">
         <div class="cookie-consent-content">
             <div class="cookie-consent-text">
@@ -962,7 +962,7 @@
         </div>
     </div>
 
-    <!-- Cookie Settings Modal -->
+    <!-- Modal de configuración de cookies -->
     <div id="cookie-modal" class="cookie-modal">
         <div class="cookie-modal-content">
             <div class="cookie-modal-header">
